package edu.fiuba.algo3.modelo.Celdas;

public interface GameEntity{
	
}