@startuml

interface GameEntity

interface Construcciones{
    + puedeCostear(construible) bool
    + puedeConstruir(construible) bool
    + construir(construible)
}



interface Construccion{

}

Construccion...|> GameEntity
interface Defensa{

}

class TorrePlateada
class TorreBlanca

TorreBlanca ..|> Defensa
TorrePlateada ..|> Defensa

Defensa ..|> Construccion


class Enemigos{
    + atacarMasCercano(posicion,defensa)
}

class DefensasJugador{
    DefensasJugador(enemigos,jugador)
    +accionarEn(turno, controladorJuego)
}

DefensasJugador ..|> Construcciones
DefensasJugador --> Defensa



DefensasJugador-->"1" Enemigos


@enduml